# Schwab

./: .coverage  Dockerfile  README.md  coverage.xml  pyproject.toml  requirements.txt
app/: __init__.py  ingest.py  main.py  models.py  monitor.py  pipeline.py  retriever.py  summarizer.py  utils.py
data/: .gitkeep
scripts/: build_index.py
stock_news_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_ingest.py  test_pipeline.py  test_retriever.py  test_summarizer.py
ui/: streamlit_app.py
